vlib/v/checker/tests/no_interface_receiver_duplicate_b.vv
fn (a Abc) fun() {
}

interface Abc {
	fun()
}
